--- a/VectorPainerPro/MainForm.resx
+++ b/VectorPainerPro/MainForm.resx
@@ -118,6 +118,16 @@
         HQBNVUMPbZKBkpKSDcgQIO0EFSIdjBqCCUCxAozeUiiX2oCBAQAqGj26wByvZgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnSelect.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADcSURBVDhPYxh8QEZGRhpEKyoq/kfmEwVUVFRkZGVlXyop
+        KZkADegE0SA+SByqhDBQVlY2BtrKCWKDaBAfLEEMADkbiDugXAaGiF1SQP5EmHeIAiBnw1zAELvrLEPM
+        Tm4wmxiAHAZggdhd/xlid65hYPjPCOYTA1BCHWwAEMfsqoeKkAhgBsRu+8cQvSsSKkoCgBsAxJHbvjPE
+        7TCDyhAJQBqjd94BeuE8EGcC+bFQGSJB7K6ZDCHHOBmitl9jSNvEBRUlA8Tu6gTiKCiPDBC9R4shdncu
+        lEdNwMAAAOZWRue8qlasAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnPencil.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
