--- a/VectorPainerPro/MainForm.resx
+++ b/VectorPainerPro/MainForm.resx
@@ -123,9 +123,9 @@
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADdSURBVDhPYxh8QEZGRhpEKyoq/kfmEwVUVFSA6mVeKikp
         mQAN6ATRID5IHKqEMFBWVjYGauIEsUE0iA+WIAaAnA3EHVAuA0PELikgfyLMO0QBqLPBLmCI3XWWIWYn
-        N5hNDEAOA7BA7K7/DLE71zAw/GcE84kBQAMQoQ42AIhjdtVDRUgEMANiN/xjiN4VCRUlAcANAOLgDd8Z
+        N5hNDEAOA7BA7K7/DLE71zAw/GcE84kBQAMQoQ42AIhjdtVDRUgEMANiV/9jiN4VCRUlAcANAGL/9d8Z
         4naYQWWIBCCN0TvvAL1wHogzgfxYqAyRIHbXTIaQY5wMUduvMaRt4oKKkgFid3UCcRSURwaI3qPFELs7
-        F8qjJmBgAACydUbMJMecDQAAAABJRU5ErkJggg==
+        F8qjJmBgAACjikbCcXHIRwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnPencil.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -141,10 +141,10 @@
   <metadata name="openDllDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>151, 17</value>
   </metadata>
-  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonRepeat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAF58AABefAEAx3y0AAAAB3RJ
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAF53AABedwGJ9FW8AAAAB3RJ
         TUUH5ggaFic2DslWOwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAHSSURBVEhL
         tdZJKLVRHMfx6zWWuQwrLEgpeevdyJSVFMqWlGRjpRArZWHzZvFG2UiKEmX19mbKQjZiY2OlTGWDsDBk
         yvj9XZ3bg3uvZ/D+6lPu6bnnOOd/nnOuz2YiEINYRKrhu6IOC9GM3xjDOAbRjnKkwFX0n5ZiFPu4w8sH
@@ -156,20 +156,20 @@
         CHafyAqK8GV0ovbAyc14hQnkw3ac3PELcHzHW/Nff60Ei4ffXT7fKwBMy4XnhE5XAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAJeiAACXogHws57tAAAAB3RJ
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAJegAACXoAGPTV1kAAAAB3RJ
         TUUH5ggaFic2DslWOwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAABsSURBVEhL
         vdYxCoAwAATBvCZf94dpLPTOUrZzjTAgqxxYmZFrxhErLlH3utv95+YMevGr7nZf/4K37uMDG0YbRhtG
         G0YbRhtGG0YbRhtGG0YbRhtGG0YbRhtGG0YbRhtG255//JbTys/nrjFvYUloMuqKGCEAAAAASUVORK5C
         YII=
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="buttonPlay.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAJTdAACU3QGRzuAEAAAAB3RJ
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAJTaAACU2gHDikZ7AAAAB3RJ
         TUUH5ggaFic2DslWOwAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAADcSURBVEhL
         1dYhDwFxGMfxw8am2CRBETVFM9Mkr0DzJhBMEzXNK9Akb0BSZIFoExSbxMb3ud0TbLg793+C7/apfrud
         +995QU3sccQAJThvhEfgihU6yMNJKUygI+qMOerIIFGfRtQBY1Twc2Ej4o4NeigidlFGlNyvJdrIIXJx
